--- a/tmux.conf
+++ b/tmux.conf
@@ -26,17 +26,7 @@ bind-key -n 'M-h' if-shell "$is_vim" 'send-keys M-h'  'select-pane -L'
 bind-key -n 'M-j' if-shell "$is_vim" 'send-keys M-j'  'select-pane -D'
 bind-key -n 'M-k' if-shell "$is_vim" 'send-keys M-k'  'select-pane -U'
 bind-key -n 'M-l' if-shell "$is_vim" 'send-keys M-l'  'select-pane -R'
-tmux_version='$(tmux -V | sed -En "s/^tmux ([0-9]+(.[0-9]+)?).*/\1/p")'
-if-shell -b '[ "$(echo "$tmux_version < 3.0" | bc)" = 1 ]' \
-    "bind-key -n 'M-\\' if-shell \"$is_vim\" 'send-keys M-\\'  'select-pane -l'"
-if-shell -b '[ "$(echo "$tmux_version >= 3.0" | bc)" = 1 ]' \
-    "bind-key -n 'M-\\' if-shell \"$is_vim\" 'send-keys M-\\\\'  'select-pane -l'"
-
-bind-key -T copy-mode-vi 'C-h' select-pane -L
-bind-key -T copy-mode-vi 'C-j' select-pane -D
-bind-key -T copy-mode-vi 'C-k' select-pane -U
-bind-key -T copy-mode-vi 'C-l' select-pane -R
-bind-key -T copy-mode-vi 'C-\' select-pane -l
+bind-key -n 'M-\\' if-shell "$is_vim" 'send-keys M-\\'  'select-pane -l'
 
 # No automatic window renaming
 set-option -g allow-rename off
@@ -75,6 +65,7 @@ bind-key -T copy-mode-vi 'v' send -X begin-selection # start selecting text with
 bind-key -T copy-mode-vi 'y' send -X copy-selection # copy text with "y"
 
 
+set -g @plugin 'catppuccin/tmux'
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'christoomey/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-yank'
