--- a/tmux.conf
+++ b/tmux.conf
@@ -26,7 +26,6 @@ bind-key -n 'M-h' if-shell "$is_vim" 'send-keys M-h'  'select-pane -L'
 bind-key -n 'M-j' if-shell "$is_vim" 'send-keys M-j'  'select-pane -D'
 bind-key -n 'M-k' if-shell "$is_vim" 'send-keys M-k'  'select-pane -U'
 bind-key -n 'M-l' if-shell "$is_vim" 'send-keys M-l'  'select-pane -R'
-bind-key -n 'M-\\' if-shell "$is_vim" 'send-keys M-\\'  'select-pane -l'
 
 # No automatic window renaming
 set-option -g allow-rename off
@@ -67,7 +66,6 @@ bind-key -T copy-mode-vi 'y' send -X copy-selection # copy text with "y"
 
 set -g @plugin 'catppuccin/tmux'
 set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'christoomey/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'catppuccin/tmux'
 
@@ -88,5 +86,10 @@ set-option -g detach-on-destroy off
 
 # Focus envents
 set-option -g focus-events on
+unbind C-h
+unbind C-j
+unbind C-k
+unbind C-l
+
 
 run '~/.tmux/plugins/tpm/tpm'
