bar with transparency

--- a/tmux.conf
+++ b/tmux.conf
@@ -40,6 +40,7 @@ set -g bell-action none
 # Status bar
 set -g status-position top
 set -g status-justify left
+set-option -g status-style bg=default
 
 # Start index on 1
 set -g base-index 1
